guestbook/guestbook-ui/guestbook-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: guestbook
  namespace: blue-local
  labels:
    app.kubernetes.io/name: guestbook
    app.kubernetes.io/version: v3.0.0
    app.kubernetes.io/component: guestbook-ui
    app.kubernetes.io/part-of: guestbook
    app.kubernetes.io/environment: local
    app: guestbook
    version: v3.0.0
spec:
  ports:
  - name: http-guestbook
    port: 3000
    targetPort: 3000
  selector:
    app: guestbook
    version: v3.0.0
